Added basic scaffolding for the entry item form.